--- a/location.html
+++ b/location.html
@@ -36,10 +36,10 @@
       <div>
         <form id="form-group" class="search" action="./search.html">
           <input id="inputTag" type="search" placeholder="Search..." />
-          <i class="fas fa-search"></i>
+          <!-- <i class="fas fa-search"></i> -->
           <button id="search-btn" type="submit" value="submit" onclick="getData()">Search</button>
         </form>
-        <button>Sign up</button>
+        <!-- <button>Sign up</button> -->
       </div>
     </nav>
   </header>
