--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <div class="modal-bg" id="modal">
     <div>
       <span id="closeBtn">X</span>
-      <h3>How far, that wasn't a correct location.<br>
-        Check and try again biko
+      <h3 id="text">How far, that thing is either not a correct location or empty.<br>
+        Check and try again biko.
       </h3>
     </div>
   </div>
