--- a/location.html
+++ b/location.html
@@ -11,8 +11,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon.ico" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="manifest" rel="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#4f4b92" />
+  <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/favicon/apple-icon-72x72.png">
 </head>
 
 <body onload="getLocation()">
